# synthetic-synctl

./: DESCRIPTION.md  LICENSE  README.md  pyproject.toml  setup.py  synctl
docs/: synctl-cli.md  synctl-config.md  synctl-create-alert.md  synctl-create-credential.md  synctl-create-sa.md  synctl-create-test.md  synctl-cred.md  synctl-credential.md  synctl-delete-alert.md  synctl-delete-credential.md  synctl-delete-loc.md  synctl-delete-sa.md  synctl-delete-test.md  synctl-get-alert.md  synctl-get-app.md  synctl-get-cost.md  synctl-get-credential.md  synctl-get-datacenter.md  synctl-get-loc.md  synctl-get-metric.md  synctl-get-result.md  synctl-get-sa.md  synctl-get-size.md  synctl-get-test.md  synctl-introduction.md  synctl-patch-credential.md  synctl-patch-test.md  synctl-pop-size.md  synctl-run-test.md  synctl-update-alert.md  synctl-update-credential.md  synctl-update-test.md
examples/browserscripts/: api-sample.js
examples/payload/: bundle-script.json  ping-payload.json
examples/payload-examples/: browser-script.json
examples/side/: browser.side  webpage-script.side
http-scripts/: http-get.js
payload-examples/: api-script.json  webpage-script.json
syncli/: cli.py
synctl/: cli.py
test/: ut.py
tests/: test_synctl.py
